# gptcommit

./: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  prepare-commit-msg  renovate.json  rustfmt.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  ci.yml  post-upload.yaml  release.yml  rust-clippy.yml  test.yaml  winget.yml
e2e/: test_config_list_get_set.sh  test_config_local_list_get_set.sh  test_githook.sh  test_install.sh  test_version.sh
package/winget/: build.ps1  zurawiki.gptcommit.installer.yaml  zurawiki.gptcommit.locale.en-US.yaml  zurawiki.gptcommit.yaml
prompts/: conventional_commit.tera  summarize_commit.prompt.txt  summarize_commit.tera  summarize_file_diff.prompt.txt  summarize_file_diff.tera  title_commit.prompt.txt  title_commit.tera  translation.tera
src/: cli.rs  cmd.rs  git.rs  help.rs  main.rs  openai.rs  prompt.rs  settings.rs  summarize.rs  toml.rs  util.rs
src/actions/: config.rs  install.rs  mod.rs  prepare_commit_msg.rs  uninstall.rs
src/llms/: base_llm.rs  llm_client.rs  mod.rs  openai.rs  tester_foobar.rs
tests/bench/: bench_githook_openai.sh  bench_githook_test.sh  run_bench.sh
tests/data/: example_1.diff  example_2.diff
tests/e2e/: test_config_list_get_set.sh  test_config_local_list_get_set.sh  test_githook.sh  test_githook_file_ignore.sh
