[package]
name = "gptcommit"
version = "0.5.9"
edition = "2021"
rust-version = "1.67"
authors = ["Roger Zurawicki <roger@zura.wiki>"]
categories = ["development-tools"]
keywords = ["openai", "githook", "git", "ai", "gpt"]
description = "A git prepare-commit-msg hook for summarizing commits with LLMs."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/zurawiki/gptcommit"
repository = "https://github.com/zurawiki/gptcommit"

[[bin]]
name = "gptcommit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
async-openai = "0.12.0"
async-trait = "0.1.68"
backoff = "0.4.0"
clap = { version = "4.3.8", features = ["derive"] }
colored = "2.0.0"
config = { version = "0.13.3", features = ["toml"] }
dirs = "5.0.1"
lazy_static = "1.4.0"
log = "0.4.19"
regex = "1.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.99"
simple_logger = "4.2.0"
strum = "0.25.0"
strum_macros = "0.25.0"
tera = { version = "1.19.0", default-features = false }
tiktoken-rs = { version = "0.5.0", features = ["async-openai"] }
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.5"
toml_edit = "0.19.11"
which = "4.4.0"


[dependencies.reqwest]
version = "0.11.18"
features = [
    "brotli",
    "gzip",
    "json",
    "multipart",
    "rustls-tls",
    "stream",
    "socks"
]
default-features = false

[dev-dependencies]
async-std = "1.12.0"
