[package]
name = "gptcommit"
version = "0.5.16"
edition = "2021"
rust-version = "1.72"
authors = ["Roger Zurawicki <roger@zura.wiki>"]
categories = ["development-tools"]
keywords = ["openai", "githook", "git", "ai", "gpt"]
description = "A git prepare-commit-msg hook for summarizing commits with LLMs."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/zurawiki/gptcommit"
repository = "https://github.com/zurawiki/gptcommit"

[[bin]]
name = "gptcommit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
async-openai = "0.14.2"
async-trait = "0.1.73"
backoff = "0.4.0"
clap = { version = "4.4.4", features = ["derive"] }
colored = "2.0.4"
config = { version = "0.13.3", features = ["toml"] }
dirs = "5.0.1"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
simple_logger = "4.2.0"
strum = "0.25.0"
strum_macros = "0.25.2"
tera = { version = "1.19.1", default-features = false }
tiktoken-rs = { version = "0.5.9", features = ["async-openai"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.0"
toml_edit = "0.20.0"
which = "4.4.2"


[dependencies.reqwest]
version = "0.11.20"
features = [
    "brotli",
    "gzip",
    "json",
    "multipart",
    "rustls-tls",
    "stream",
    "socks",
]
default-features = false

[dev-dependencies]
async-std = "1.12.0"
